# trainer_schedule

./: CMakeLists.txt  cancel.cpp  cancel.h  cancel.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  secondw.cpp  secondw.h  secondw.ui  shedule.cpp  shedule.db  shedule.h  shedule.ui  src.qrc
